--- a/css/stylev1.css
+++ b/css/stylev1.css
@@ -201,31 +201,14 @@ padding-bottom:30px;
   .iframediv {
     width: 100%;
     border-radius: 10px;
-    padding-top: 2em;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-bottom:2em;
+    padding:0;
    
 }
 
-
-
-.moelogo {
-  align-content: center;
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 5em;
-  background-color: white;
-  padding:.75em;
-}
-.moelogo img{
-  width: 200px;
 }
 
-  }
 
+
+
+  
 
